--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -18,6 +18,7 @@
           <th>Goals</th>
           <th>Points Available</th>
           <th>Route</th>
+          <th>Map</th>
           <th>Scores</th>
           <th>Statistics</th>
         </tr>
