--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -17,6 +17,7 @@ $gray-medium-light: #eaeaea;
   margin-top: 45px;
   @include box_sizing;
 }
+
 .panel-body.bold {
   font-size: 1.2em;
   line-height: 1.7em;
@@ -28,26 +29,32 @@ a {
     text-decoration: none;
   }
 }
+
 body {
   padding-top: 60px;
 }
+
 section {
   overflow: auto;
 }
+
 textarea {
   height: 140px;
   min-height: 140px;
   resize: vertical;
 }
+
 .center {
   text-align: center;
   h1 {
     margin-bottom: 10px;
   }
 }
+
 .left {
   float: left;
 }
+
 .right {
   float: right;
 }
@@ -58,10 +65,12 @@ h1 {
   margin-bottom: 30px;
   text-align: center;
 }
+
 p {
   font-size: 1.2em;
   line-height: 1.7em;
 }
+
 ol li {
   padding-bottom: 10px;
   font-size: 1.2em;
@@ -73,11 +82,13 @@ ol li {
   color: #fff;
   font-weight: bold;
 }
+
 #clock {
   display: inline-block;
   min-width: 40px;
   text-align: right;
 }
+
 #official-time {
   &:hover {
     color: #fff;
@@ -153,30 +164,38 @@ select,
   margin-bottom: 15px;
   @include box_sizing;
 }
+
 input {
   height: auto !important;
 }
+
 #error_explanation {
   color: $state-danger-text;
+
   ul {
     color: $state-danger-text;
     margin: 0 0 30px 0;
   }
 }
+
 .field_with_errors {
   @extend .has-error;
+
   .form-control {
     color: $state-danger-text;
   }
 }
+
 .checkbox {
   margin-top: -10px;
   margin-bottom: 10px;
+
   span {
     margin-left: 20px;
     font-weight: normal;
   }
 }
+
 .vspace {
   margin-top: 18px;
 }
@@ -185,6 +204,12 @@ input {
 table {
   white-space: nowrap;
 }
+
 .wide-table {
   overflow: auto;
+}
+
+#map {
+  height: 800px;
+  width: 100%;
 }
