Update map to properly display goal information across challenges

--- a/app/views/challenges/map.html.erb
+++ b/app/views/challenges/map.html.erb
@@ -7,7 +7,8 @@
 
 <div class="row">
   <div class="col-md-12">
-    <p>The map below shows the checkpoints in red and team locations in green.
+    <p>The map below shows the checkpoints in red, start or compulsory
+       checkpoints in purple and team locations in green.
        Click on a marker for more information.</p>
   </div>
 </div>
