Updates to model, controller and view following DB schema change

--- a/app/views/challenges/map.html.erb
+++ b/app/views/challenges/map.html.erb
@@ -33,12 +33,13 @@
       <thead>
         <tr>
           <th>Team No.</th>
-          <th>Time</th>
+          <th>GPS Fix Timestamp</th>
           <th>Latitude</th>
           <th>Longitude</th>
           <th>Speed (kph)</th>
-          <th>Battery (%)</th>
-          <th>Signal Strength (%)</th>
+          <th>Battery Level</th>
+          <th>Battery Voltage</th>
+          <th>RSSI</th>
           <th>From</th>
         </tr>
       </thead>
