--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,7 @@
  *= require bootstrap-datepicker3
  */
 
-@import "main";
-@import "teams";
-@import "static_pages"
+@import 'main';
+@import 'teams';
+@import 'static_pages';
+@import 'challenges';
