--- a/app/views/challenges/map.html.erb
+++ b/app/views/challenges/map.html.erb
@@ -10,6 +10,7 @@
     <p>The map below shows the checkpoints in red, start or compulsory
        checkpoints in purple and team locations in green.
        Click on a marker for more information.</p>
+    <p>Click on a table row to pan to the position on the map.</p>
   </div>
 </div>
 
@@ -29,7 +30,7 @@
 
 <div class="row vspace">
   <div class="col-md-12 col-xs-12 wide-table">
-    <table class="table table-striped locations">
+    <table id="team-locations" class="table table-striped locations table-hover">
       <thead>
         <tr>
           <th>Team No.</th>
@@ -37,8 +38,7 @@
           <th>Latitude</th>
           <th>Longitude</th>
           <th>Speed (kph)</th>
-          <th>Battery Level</th>
-          <th>Battery Voltage</th>
+          <th>Battery</th>
           <th>RSSI</th>
           <th>From</th>
         </tr>
