--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -2,17 +2,29 @@
 
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
-    <p>The Sodbury Challenge is an overnight orienteering exercise held in the Sodbury/Wickwar/Rangeworthy area of South Gloucestershire. The event is open to all Scouts, Explorers, Guides, Network and Leaders.</p>
+    <p>The Sodbury Challenge is an overnight orienteering exercise held in
+    the Sodbury/Wickwar/Rangeworthy area of South Gloucestershire. The event
+    is open to all Scouts, Explorers, Guides, Network and Leaders.</p>
 
-    <p>The Challenge consists of a 5 and an 8 hour exercise with the winning team in each section being the team gaining the most points in the allotted time. The 5 hour exercise is open to ages up to 14, the 8 hour exercise is open to ages 14 and above. If you are under 14, you may enter either exercise, those 14 and above must enter the 8 hour exercise.</p>
+    <p>The Challenge consists of a 5 and an 8 hour exercise with the winning
+    team in each section being the team gaining the most points in the
+    allotted time. The 5 hour exercise is open to ages up to 14, the 8 hour
+    exercise is open to ages 14 and above. If you are under 14, you may enter
+    either exercise, those 14 and above must enter the 8 hour exercise.</p>
 
-    <p>We also allow inexperienced teams and non-competitive teams who just want to take part, usually with a leader to help.</p>
+    <p>We also allow inexperienced teams and non-competitive teams who just
+    want to take part, usually with a leader to help.</p>
 
-    <p><strong>5 HOUR</strong> &ndash; A five hour exercise for teams of 3&ndash;5 members. First team out at 6pm and then the rest at 10 minute intervals.</p>
+    <p><strong>5 HOUR</strong> &ndash; A five hour exercise for teams of
+    3&ndash;5 members. First team out at 6pm and then the rest at 10 minute
+    intervals.</p>
 
-    <p><strong>8 HOUR</strong> &ndash; An eight hour exercise for teams of 3&ndash;5 members. First team out at 10pm and then the rest at 15 minute intervals.</p>
+    <p><strong>8 HOUR</strong> &ndash; An eight hour exercise for teams of
+    3&ndash;5 members. First team out at 10pm and then the rest at 15
+    minute intervals.</p>
 
-    <p>This year's event will take place on Saturday 12<sup>th</sup> October 2019.</p>
+    <p>This year's event will take place on Saturday 8<sup>th</sup>
+    October 2022.</p>
   </div>
 </div>
 
@@ -23,7 +35,8 @@
         <h4 class="panel-title">Note</h4>
       </div>
       <div class="panel-body bold">
-        All teams entering the competition should be entering their own activity notification form to the relevant ADC.
+        All teams entering the competition should be entering their own
+        activity notification form to the relevant ADC.
       </div>
     </div>
   </div>
