--- a/app/views/static_pages/rules.html.erb
+++ b/app/views/static_pages/rules.html.erb
@@ -16,7 +16,9 @@
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
     <ol>
-      <li>All entry forms and fees must be in by the end of Saturday 5<sup>th</sup> October 2019.</li>
+      <li>All entry forms and fees must be in by the closing date (see
+        <a target="_blank" href="http://www.chippingsodburyscouts.org.uk/index.php/sodbury-challenge.html">letter</a>).
+      </li>
 
       <li>Entrants/teams must be able to read a map and understand eight-figure grid
       references, e.g. 1235-1230 (the fourth digit will be a 0 or a 5).</li>
