Updated kit list

--- a/app/views/static_pages/kit.html.erb
+++ b/app/views/static_pages/kit.html.erb
@@ -6,6 +6,7 @@
 
     <ul>
       <li>Ordnance Survey Map 1:25000 (Orange) Sheet ST 167 (the course can stretch anywhere between the M5 and A46)</li>
+      <li>Map case</li>
       <li>Compass</li>
       <li>Pencil and Paper</li>
       <li>Waterproof Tops and Bottoms</li>
