Fix order of dropdown

--- a/app/views/goals/new.html.erb
+++ b/app/views/goals/new.html.erb
@@ -17,7 +17,7 @@
       <% end %>
 
       <%= f.label :checkpoint_id, "Checkpoint" %>
-      <% checkpoints_array = Checkpoint.all.map do |c| ["\##{c.number} #{truncate c.description}", c.id] end %>
+      <% checkpoints_array = Checkpoint.all.order(:number).map do |c| ["\##{c.number} #{truncate c.description}", c.id] end %>
       <%= f.select :checkpoint_id, options_for_select(checkpoints_array, f.object.checkpoint_id), { }, { class: 'form-control' } %>
 
       <%= f.label :points_value, "Points Value" %>
