--- a/app/views/static_pages/_results_table.html.erb
+++ b/app/views/static_pages/_results_table.html.erb
@@ -1,5 +1,5 @@
 <% if challenge.teams.size > 0 %>
-  <% scout_guide_teams = challenge.teams.where(group: [0,5]).where(disqualified: false) %>
+  <% scout_guide_teams = challenge.teams.where(group: [0, 5]).where(disqualified: false) %>
   <% explorer_ranger_teams = challenge.teams.where(group: [1, 6]).where(disqualified: false) %>
   <% non_competitive_teams = challenge.teams.where(group: 2).where(disqualified: false) %>
   <% network_leader_teams = challenge.teams.where(group: [3, 4]).where(disqualified: false) %>
@@ -27,13 +27,16 @@
                 </tr>
               </thead>
               <tbody>
-                <% position = 1 %>
-                <% scout_guide_teams.order(:score).reverse.each do |team| %>
+                <% results_table(scout_guide_teams).each do |team| %>
                   <tr>
-                    <td><%= position.ordinalize %></td>
-                    <td><%= team.name %></td>
-                    <td><%= team.score %></td>
-                    <% position += 1 %>
+                    <td><%= team[:position] %></td>
+                    <td><%= team[:name] %></td>
+                    <td>
+                      <%= team[:score] %>
+                      <% if logged_in? %>
+                        <%= format_minutes_late(team[:minutes_late]) %>
+                      <% end %>
+                    </td>
                   </tr>
                 <% end %>
               </tbody>
@@ -58,13 +61,16 @@
                 </tr>
               </thead>
               <tbody>
-                <% position = 1 %>
-                <% explorer_ranger_teams.order(:score).reverse.each do |team| %>
+                <% results_table(explorer_ranger_teams).each do |team| %>
                   <tr>
-                    <td><%= position.ordinalize %></td>
-                    <td><%= team.name %></td>
-                    <td><%= team.score %></td>
-                    <% position += 1 %>
+                    <td><%= team[:position] %></td>
+                    <td><%= team[:name] %></td>
+                    <td>
+                      <%= team[:score] %>
+                      <% if logged_in? %>
+                        <%= format_minutes_late(team[:minutes_late]) %>
+                      <% end %>
+                    </td>
                   </tr>
                 <% end %>
               </tbody>
@@ -89,13 +95,16 @@
                 </tr>
               </thead>
               <tbody>
-                <% position = 1 %>
-                <% network_leader_teams.order(:score).reverse.each do |team| %>
+                <% results_table(network_leader_teams).each do |team| %>
                   <tr>
-                    <td><%= position.ordinalize %></td>
-                    <td><%= team.name %></td>
-                    <td><%= team.score %></td>
-                    <% position += 1 %>
+                    <td><%= team[:position] %></td>
+                    <td><%= team[:name] %></td>
+                    <td>
+                      <%= team[:score] %>
+                      <% if logged_in? %>
+                        <%= format_minutes_late(team[:minutes_late]) %>
+                      <% end %>
+                    </td>
                   </tr>
                 <% end %>
               </tbody>
