--- a/app/views/challenges/map.html.erb
+++ b/app/views/challenges/map.html.erb
@@ -10,7 +10,8 @@
     <p>The map below shows the checkpoints in red, start or compulsory
        checkpoints in purple and team locations in green.
        Click on a marker for more information.</p>
-    <p>Click on a table row to pan to the position on the map.</p>
+    <p>Click on a table row to pan to the position on the map and display
+    the team's route so far.</p>
   </div>
 </div>
 
