--- a/app/views/challenges/map.html.erb
+++ b/app/views/challenges/map.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Team Tracking') %>
+<% provide(:title, "Team Tracking #{@challenge.date.year}") %>
 <%= content_for(:body_attributes) do %> data-no-turbolink <% end %>
 
 <% if logged_in? %>
